sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:26:17 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=165 varID=255 objID=dummy
.. Answered with error to command (165), [description: Get Vehicle Type Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
